Fixing Broken links

--- a/src/app/dashboard-main/dashboard-main.html
+++ b/src/app/dashboard-main/dashboard-main.html
@@ -149,10 +149,10 @@
               <div class="in-block update_date_title">
                 <p class="eqe_text">Equipment Name</p>
                 <p class="eqe_text">Job Site Location</p>
-                <p class="last_day"><a href="#">Last 4 days to submit</a></p>
+                <p class="last_day"><a  >Last 4 days to submit</a></p>
                 <p class="view_contact">
-                  <span class="text-left extend_link"><a href="#">Extend Now</a></span>
-                  <span class=" flot-right view_contract_link"><a href="#">View Contract</a></span>
+                  <span class="text-left extend_link"><a  >Extend Now</a></span>
+                  <span class=" flot-right view_contract_link"><a  >View Contract</a></span>
                 </p>
 
 
@@ -169,10 +169,10 @@
               <div class="in-block update_date_title">
                 <p class="eqe_text">Equipment Name</p>
                 <p class="eqe_text">Job Site Location</p>
-                <p class="last_day"><a href="#">Last 4 days to submit</a></p>
+                <p class="last_day"><a  >Last 4 days to submit</a></p>
                 <p class="view_contact">
-                  <span class="text-left extend_link"><a href="#">Extend Now</a></span>
-                  <span class=" flot-right view_contract_link"><a href="#">View Contract</a></span>
+                  <span class="text-left extend_link"><a  >Extend Now</a></span>
+                  <span class=" flot-right view_contract_link"><a  >View Contract</a></span>
                 </p>
 
 
@@ -189,10 +189,10 @@
               <div class="in-block update_date_title">
                 <p class="eqe_text">Equipment Name</p>
                 <p class="eqe_text">Job Site Location</p>
-                <p class="last_day"><a href="#">Last 4 days to submit</a></p>
+                <p class="last_day"><a  >Last 4 days to submit</a></p>
                 <p class="view_contact">
-                  <span class="text-left extend_link"><a href="#">Extend Now</a></span>
-                  <span class=" flot-right view_contract_link"><a href="#">View Contract</a></span>
+                  <span class="text-left extend_link"><a  >Extend Now</a></span>
+                  <span class=" flot-right view_contract_link"><a  >View Contract</a></span>
                 </p>
 
 
@@ -209,10 +209,10 @@
               <div class="in-block update_date_title">
                 <p class="eqe_text">Equipment Name</p>
                 <p class="eqe_text">Job Site Location</p>
-                <p class="last_day"><a href="#">Last 4 days to submit</a></p>
+                <p class="last_day"><a  >Last 4 days to submit</a></p>
                 <p class="view_contact">
-                  <span class="text-left extend_link"><a href="#">Extend Now</a></span>
-                  <span class=" flot-right view_contract_link"><a href="#">View Contract</a></span>
+                  <span class="text-left extend_link"><a  >Extend Now</a></span>
+                  <span class=" flot-right view_contract_link"><a  >View Contract</a></span>
                 </p>
 
 
@@ -246,8 +246,8 @@
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 flot-right add_site_top nopadding">
 
         <div class="btn-group btn-group-justified">
-          <a href="#" class="btn btn-primary btn_map_view">Map View</a>
-          <a href="#" class="btn btn-primary btn_map_view">List View</a>
+          <a   class="btn btn-primary btn_map_view">Map View</a>
+          <a   class="btn btn-primary btn_map_view">List View</a>
 
         </div>
       </div>
@@ -287,8 +287,8 @@
       <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 flot-right add_site_top nopadding">
 
         <div class="btn-group btn-group-justified">
-          <a href="#" class="btn btn-primary btn_map_view">All Invoices</a>
-          <a href="#" class="btn btn-primary btn_map_view">Outstanding</a>
+          <a   class="btn btn-primary btn_map_view">All Invoices</a>
+          <a   class="btn btn-primary btn_map_view">Outstanding</a>
 
         </div>
       </div>
@@ -306,113 +306,113 @@
           </thead>
           <tbody>
           <tr class="invoice-tr">
-            <td><a href="#">49345</a></td>
+            <td><a  >49345</a></td>
             <td>Harbor Freight</td>
             <td>23478</td>
             <td>324-46733</td>
             <td>$ 928.96</td>
             <td>$ 00.00</td>
-            <td><a href="#"><i class="fa fa-download"></i></a>
+            <td><a  ><i class="fa fa-download"></i></a>
             </td>
           </tr>
           <tr class="invoice-tr">
-            <td><a href="#">49345</a></td>
+            <td><a  >49345</a></td>
             <td>Harbor Freight</td>
             <td>23478</td>
             <td>324-46733</td>
             <td>$ 928.96</td>
             <td>$ 00.00</td>
-            <td><a href="#"><i class="fa fa-download"></i></a>
+            <td><a  ><i class="fa fa-download"></i></a>
             </td>
           </tr>
           <tr class="invoice-tr">
-            <td><a href="#">49345</a></td>
+            <td><a  >49345</a></td>
             <td>Harbor Freight</td>
             <td>23478</td>
             <td>324-46733</td>
             <td>$ 928.96</td>
             <td>$ 00.00</td>
-            <td><a href="#"><i class="fa fa-download"></i></a>
+            <td><a  ><i class="fa fa-download"></i></a>
             </td>
           </tr>
           <tr class="invoice-tr">
-            <td><a href="#">49345</a></td>
+            <td><a  >49345</a></td>
             <td>Harbor Freight</td>
             <td>23478</td>
             <td>324-46733</td>
             <td>$ 928.96</td>
             <td>$ 00.00</td>
-            <td><a href="#"><i class="fa fa-download"></i></a>
+            <td><a  ><i class="fa fa-download"></i></a>
             </td>
           </tr>
           <tr class="invoice-tr">
-            <td><a href="#">49345</a></td>
+            <td><a  >49345</a></td>
             <td>Harbor Freight</td>
             <td>23478</td>
             <td>324-46733</td>
             <td>$ 928.96</td>
             <td>$ 00.00</td>
-            <td><a href="#"><i class="fa fa-download"></i></a>
+            <td><a  ><i class="fa fa-download"></i></a>
             </td>
           </tr>
           <tr class="invoice-tr">
-            <td><a href="#">49345</a></td>
+            <td><a  >49345</a></td>
             <td>Harbor Freight</td>
             <td>23478</td>
             <td>324-46733</td>
             <td>$ 928.96</td>
             <td>$ 00.00</td>
-            <td><a href="#"><i class="fa fa-download"></i></a>
+            <td><a  ><i class="fa fa-download"></i></a>
             </td>
           </tr>
           <tr class="invoice-tr">
-            <td><a href="#">49345</a></td>
+            <td><a  >49345</a></td>
             <td>Harbor Freight</td>
             <td>23478</td>
             <td>324-46733</td>
             <td>$ 928.96</td>
             <td>$ 00.00</td>
-            <td><a href="#"><i class="fa fa-download"></i></a>
+            <td><a  ><i class="fa fa-download"></i></a>
             </td>
           </tr>
           <tr class="invoice-tr">
-            <td><a href="#">49345</a></td>
+            <td><a  >49345</a></td>
             <td>Harbor Freight</td>
             <td>23478</td>
             <td>324-46733</td>
             <td>$ 928.96</td>
             <td>$ 00.00</td>
-            <td><a href="#"><i class="fa fa-download"></i></a>
+            <td><a  ><i class="fa fa-download"></i></a>
             </td>
           </tr>
           <tr class="invoice-tr">
-            <td><a href="#">49345</a></td>
+            <td><a  >49345</a></td>
             <td>Harbor Freight</td>
             <td>23478</td>
             <td>324-46733</td>
             <td>$ 928.96</td>
             <td>$ 00.00</td>
-            <td><a href="#"><i class="fa fa-download"></i></a>
+            <td><a  ><i class="fa fa-download"></i></a>
             </td>
           </tr>
           <tr class="invoice-tr">
-            <td><a href="#">49345</a></td>
+            <td><a  >49345</a></td>
             <td>Harbor Freight</td>
             <td>23478</td>
             <td>324-46733</td>
             <td>$ 928.96</td>
             <td>$ 00.00</td>
-            <td><a href="#"><i class="fa fa-download"></i></a>
+            <td><a  ><i class="fa fa-download"></i></a>
             </td>
           </tr>
           <tr class="invoice-tr">
-            <td><a href="#">49345</a></td>
+            <td><a  >49345</a></td>
             <td>Harbor Freight</td>
             <td>23478</td>
             <td>324-46733</td>
             <td>$ 928.96</td>
             <td>$ 00.00</td>
-            <td><a href="#"><i class="fa fa-download"></i></a>
+            <td><a  ><i class="fa fa-download"></i></a>
             </td>
           </tr>
           </tbody>
