--- a/src/app/equipment-detail/equipment-detail.html
+++ b/src/app/equipment-detail/equipment-detail.html
@@ -21,18 +21,18 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 prodetil_main leftpadding-small rightpadding-small">
           <div class="col-lg-2 col-md-2 nopadding">
-            <a href="#"><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
-            <a href="#"><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
-            <a href="#"><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
-            <a href="#"><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
-            <a href="#"><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
+            <a  ><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
+            <a  ><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
+            <a  ><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
+            <a  ><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
+            <a  ><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
 
           </div>
           <div class="col-lg-10 col-md-10 product_box nopadding">
             <!-- web img start -->
             <p class="mouse_search hidden-sm hidden-xs"><i class="fa fa-search"></i>
               Mouse hover to Zoom</p>
-            <a href="#" class="hidden-sm hidden-xs"><span hm-zoom><img class="img-responsive product-main-img" ng-src="{{equipment.Product_Image[0].ProductImage_Path}}" alt=""></span></a>
+            <a   class="hidden-sm hidden-xs"><span hm-zoom><img class="img-responsive product-main-img" ng-src="{{equipment.Product_Image[0].ProductImage_Path}}" alt=""></span></a>
             <!-- web img end -->
             <!-- mobile img start -->
             <img class="img-responsive product-main-img visible-sm visible-xs" ng-src="{{equipment.Product_Image[0].ProductImage_Path}}" alt="">
@@ -40,10 +40,10 @@
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 prodetil_main leftpadding-small rightpadding-small">
-          <h4 class="productname_tit"><a href="#">{{equipment.Product_Name}}</a></h4>
-          <h5 class="procutby">by <span class="procutby_vendor"><a href="#">{{equipment.MAKE}}</a></span></h5>
+          <h4 class="productname_tit"><a  >{{equipment.Product_Name}}</a></h4>
+          <h5 class="procutby">by <span class="procutby_vendor"><a  >{{equipment.MAKE}}</a></span></h5>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_dash_botam ten_botam rating-div">
-            <a href="#"> <i class="fa fa-star"></i>
+            <a  > <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half-o"></i>
@@ -52,7 +52,7 @@
             <!--<span class="read_reivew">Read Reviews</span>-->
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tour-col">
-            <h3 class="cunsult">Consult before Renting. Talk to our <a href="#">Rental Experts</a></h3>
+            <h3 class="cunsult">Consult before Renting. Talk to our <a  >Rental Experts</a></h3>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ten_top_botam nopadding">
             <div class="daily_ul">
@@ -138,7 +138,7 @@
                 <!--<h6 class="work_height">Inside Turning Radius: <span class="work_ft">1ft 9in (0.53m)</span></h6>-->
                 <!--<h6 class="work_height">Lift Capacity: <span class="work_ft">750lbs (340.2kg)</span></h6>-->
                 <!--<h6 class="work_height">Occupancy:  <span class="work_ft">2 persons</span></h6>-->
-                <!--<h4><a href="#" class="theme_clr">Download Complete Specifications</a></h4>-->
+                <!--<h4><a   class="theme_clr">Download Complete Specifications</a></h4>-->
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_dash_botam push_up"></div>
             </div>
@@ -154,7 +154,7 @@
                   Our team advisors are 24/7 at your service to
                   help you.
                 </p>
-                <p class="help_clr desc-text"><a href="#">help@nobleiron.com</a></p>
+                <p class="help_clr desc-text"><a  >help@nobleiron.com</a></p>
                 <p class="skype_tex desc-text"><i class="fa fa-phone"></i>
                   1-800-123-HELLO</p>
               </div>
@@ -166,7 +166,7 @@
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
               <div class="col-lg-4 col-md-4 col-sm-4 clo-xs-4">
                 <h3 class="rievew_rate">3.9 / 5.0</h3>
-                <p><a href="#"> <i class="fa fa-star fa-2x"></i>
+                <p><a  > <i class="fa fa-star fa-2x"></i>
                   <i class="fa fa-star fa-2x"></i>
                   <i class="fa fa-star fa-2x"></i>
                   <i class="fa fa-star-half-o fa-2x"></i>
@@ -176,28 +176,28 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4 clo-xs-4 quility">
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
@@ -206,28 +206,28 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4 clo-xs-4 quility">
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                   <p class="user_star_tit">Review Title goes here<span class="flot-right">
-                                                <a href="#"> <i class="fa fa-star"></i>
+                                                <a  > <i class="fa fa-star"></i>
                                                   <i class="fa fa-star"></i>
                                                   <i class="fa fa-star"></i>
                                                   <i class="fa fa-star-half-o"></i>
@@ -271,7 +271,7 @@
                 </div>
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                   <p class="user_star_tit">Review Title goes here<span class="flot-right">
-                                                <a href="#"> <i class="fa fa-star"></i>
+                                                <a  > <i class="fa fa-star"></i>
                                                   <i class="fa fa-star"></i>
                                                   <i class="fa fa-star"></i>
                                                   <i class="fa fa-star-half-o"></i>
@@ -295,7 +295,7 @@
                 </div>
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                   <p class="user_star_tit">Review Title goes here<span class="flot-right">
-                                                <a href="#"> <i class="fa fa-star"></i>
+                                                <a  > <i class="fa fa-star"></i>
                                                   <i class="fa fa-star"></i>
                                                   <i class="fa fa-star"></i>
                                                   <i class="fa fa-star-half-o"></i>
@@ -316,7 +316,7 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <h3 class="overall_rate">Overall Rating for this Vendor</h3>
-                <p><a href="#"> <i class="fa fa-star fa-2x"></i>
+                <p><a  > <i class="fa fa-star fa-2x"></i>
                   <i class="fa fa-star fa-2x"></i>
                   <i class="fa fa-star fa-2x"></i>
                   <i class="fa fa-star-half-o fa-2x"></i>
@@ -327,28 +327,28 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 quility">
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
@@ -357,28 +357,28 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 quility">
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
                                               <i class="fa fa-star-o"></i></a>
                                         </span></p>
                 <p>Some Quality<span>
-                                            <a href="#"> <i class="fa fa-star"></i>
+                                            <a  > <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star"></i>
                                               <i class="fa fa-star-half-o"></i>
