--- a/src/app/equipment-sell/equipment-sell.html
+++ b/src/app/equipment-sell/equipment-sell.html
@@ -104,7 +104,7 @@
             Our team advisors are 24/7 at your service to
             help you.
           </p>
-          <p class="help_clr"><a href="#" class="">help@nobleiron.com</a></p>
+          <p class="help_clr"><a   class="">help@nobleiron.com</a></p>
           <p class="skype_tex"><i class="fa fa-phone"></i>
             1-800-123-HELLO</p>
         </div>
