--- a/src/app/faq/faq.html
+++ b/src/app/faq/faq.html
@@ -6,8 +6,8 @@
 	</div>
 	<div class="row about-row">
 		<div class="col-xs-12 visible-xs heading-border about-fields-small">
-			<a href="#" class="btn sell-equ all-btn">Team</a>
-			<a href="#" class="btn sell-equ all-btn">Board of Directors</a>
+			<a   class="btn sell-equ all-btn">Team</a>
+			<a   class="btn sell-equ all-btn">Board of Directors</a>
 			<a href="#/FAQ" class="btn sell-equ all-btn">FAQ</a>
 			<a href="#/press-releases" class="btn sell-equ all-btn">Press Releases</a>
 			<a href="#/financial-reports" class="btn sell-equ all-btn">Financial Reports</a>
@@ -20,7 +20,7 @@
 		      <uib-accordion-heading>
 		      	<h4 class="go-back-text">
 		        	What does Noble Iron Offer?
-		        	
+
 		      	</h4>
 		      </uib-accordion-heading>
 		      <p class="desc-text">
@@ -31,7 +31,7 @@
 		      <uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	Where does Noble Iron offer its rental equipment?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 		      <p class="desc-text">
@@ -42,7 +42,7 @@
 		      <uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	What are Noble Iron's business hours?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 		      <p class="desc-text">
@@ -59,7 +59,7 @@
 		      <uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	Does Noble Iron offer a same day delivery?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 		      <p class="desc-text">
@@ -70,7 +70,7 @@
 		      <uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	How do I cancel my order? Can I set up auto termination?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 		      <p class="desc-text">
@@ -84,7 +84,7 @@
 		    	<uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	Do you guarantee delivery time?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 					<p class="desc-text">
@@ -95,11 +95,11 @@
 		    	<uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	How Long is each rental period?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 					<p class="desc-text">
-						However long you decid to keep the unit. We have price breaks for weekly and monthly rentals. You must request a termination to end your rental period. 
+						However long you decid to keep the unit. We have price breaks for weekly and monthly rentals. You must request a termination to end your rental period.
 					</p>
 					<ul class="desc-text">
 						<li><p>One Day Rental = One (1) 8-hour shift over a 24 hour period</p></li>
@@ -111,7 +111,7 @@
 		    	<uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	If my rental equipment is dropped off at 10 AM for a one day rental, how long do I have to use the equipment?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 					<p class="desc-text">
@@ -122,7 +122,7 @@
 		    	<uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	When will my equipment be picked up?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 					<p class="desc-text">
@@ -133,7 +133,7 @@
 		    	<uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	Is the rental price listed on the website the total price?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 					<p class="desc-text">
@@ -144,42 +144,42 @@
 		    	<uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	Is fuel included?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 					<p class="desc-text">
-						No. The equipment is delivered with a full fuel tank. If refueling is necessary, it is your responsibility to refuel the equipment, otherwise you will be charged a refueling fee. 
+						No. The equipment is delivered with a full fuel tank. If refueling is necessary, it is your responsibility to refuel the equipment, otherwise you will be charged a refueling fee.
 					</p>
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		    	<uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	Am I responsible for damages?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 					<p class="desc-text">
-						In most cases, yes. Incidental damage may be covered by the Damage Waiver. For complete details on our rental policies, please refer to the Terms & Conditions outlined in the provided Rental Agreement or give us a call at 1-855-767-4424.   
+						In most cases, yes. Incidental damage may be covered by the Damage Waiver. For complete details on our rental policies, please refer to the Terms & Conditions outlined in the provided Rental Agreement or give us a call at 1-855-767-4424.
 					</p>
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		    	<uib-accordion-heading>
 		        <h4 class="go-back-text">
 		        	Can I pick-up or drop off the equipment myself?
-		        	
+
 		        </h4>
 		      </uib-accordion-heading>
 					<p class="desc-text">
-						For your safety and convenince, our haulers must be used for all equipment deliveries and pick-ups. In some cases, we allow for will-call orders.  You must call us at 1-855-767-4424 or email us at customercare@nobleiron.com and we will be happy to process your request.   
+						For your safety and convenince, our haulers must be used for all equipment deliveries and pick-ups. In some cases, we allow for will-call orders.  You must call us at 1-855-767-4424 or email us at customercare@nobleiron.com and we will be happy to process your request.
 					</p>
 		    </uib-accordion-group>
 		  </uib-accordion>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-3 hidden-xs">
 			<ul class="list-group user-list-group about-dropdown">
-					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Team</a></li>
-					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Board of Directors</a></li>
-					<li class="list-group-item noborder active-about" ui-sref="hm.faq"><a class="nopadding" role="menuitem" tabindex="-1" href="#">FAQ</a></li>
+					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1"  >Team</a></li>
+					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1"  >Board of Directors</a></li>
+					<li class="list-group-item noborder active-about" ui-sref="hm.faq"><a class="nopadding" role="menuitem" tabindex="-1"  >FAQ</a></li>
 					<li class="list-group-item noborder" ui-sref="hm.pressReleases"><a class="nopadding" role="menuitem" tabindex="-1" href="#/press-releases">Press Releases</a></li>
 					<li class="list-group-item noborder" ui-sref="hm.financialReports"><a class="nopadding" role="menuitem" tabindex="-1" href="#/financial-reports">Financial Reports</a></li>
 					<li class="list-group-item noborder" ui-sref="hm.annualMeeting"><a class="nopadding" role="menuitem" tabindex="-1" href="#/annual-meeting">2015 Annual Meeting</a></li>
