--- a/src/app/invoices/invoices.html
+++ b/src/app/invoices/invoices.html
@@ -78,7 +78,7 @@
           <td>{{invoice.Balance}}</td>
           <td>
             <a href="#/invoice-detail" class="invoice-no view-down heading-text"><i class="fa fa-eye invoice-no"></i></a>
-            <a href="#" class="invoice-no view-down heading-text"><i class="fa fa-download invoice-no"></i></a></td>
+            <a   class="invoice-no view-down heading-text"><i class="fa fa-download invoice-no"></i></a></td>
         </tr>
         </tbody>
       </table>
