--- a/src/app/my-catalogue/my-catalogue.html
+++ b/src/app/my-catalogue/my-catalogue.html
@@ -27,7 +27,7 @@
             <a ui-sref="hm.equipmentDetails({id: product.Product_Id})"><img alt="" ng-src="{{product.Product_Image[0].ProductImage_Path}}"/></a>
             <!-- <div class="certified_box"> -->
             <div class="">
-              <a href="#"> <i class="fa fa-star"></i>
+              <a  > <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-half-o"></i>
