--- a/src/app/search/list.html
+++ b/src/app/search/list.html
@@ -8,10 +8,10 @@
     </div>
     <div class="col-md-6 nopadding">
       <h4 class="lift_box_tit"><a ng-href="/#/equipments/{{item.Product_Id}}">{{item.Product_Name}}</a></h4>
-      <h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a href="#">{{item.MAKE}}</a></span></h5>
+      <h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a  >{{item.MAKE}}</a></span></h5>
       <div class="col-md-3 star_list">
         <div class="star-list-top">
-          <a href="#"> <i class="fa fa-star"></i>
+          <a  > <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
             <i class="fa fa-star-half-o"></i>
