--- a/src/app/search/results.html
+++ b/src/app/search/results.html
@@ -23,9 +23,9 @@
             Sort By <span class="caret"></span>
             </button>
             <ul class="uib-dropdown-menu sort-by-dropdown" role="menu" aria-labelledby="single-button">
-            <li role="menuitem"><a href="#">Price</a></li>
-            <li role="menuitem"><a href="#">Maximum Availability</a></li>
-            <li role="menuitem"><a href="#">Relavance</a></li>
+            <li role="menuitem"><a  >Price</a></li>
+            <li role="menuitem"><a  >Maximum Availability</a></li>
+            <li role="menuitem"><a  >Relavance</a></li>
             </ul>
             </div>
             </div>
@@ -75,7 +75,7 @@
             <img src="assets/images/calendar.png" class="pull-right">
           </div>
         </div>
-        
+
         <div class="col-md-6 col2 col3 toppadding">
           <p>Email</p>
           <div class="form-control form-left your-need email-form">
