--- a/src/app/annual-meeting/annual-meeting.html
+++ b/src/app/annual-meeting/annual-meeting.html
@@ -6,8 +6,8 @@
 	</div>
 	<div class="row about-row">
 		<div class="col-xs-12 visible-xs heading-border about-fields-small">
-			<a href="#" class="btn sell-equ all-btn">Team</a>
-			<a href="#" class="btn sell-equ all-btn">Board of Directors</a>
+			<a class="btn sell-equ all-btn">Team</a>
+			<a class="btn sell-equ all-btn">Board of Directors</a>
 			<a href="#/FAQ" class="btn sell-equ all-btn">FAQ</a>
 			<a href="#/press-releases" class="btn sell-equ all-btn">Press Releases</a>
 			<a href="#/financial-reports" class="btn sell-equ all-btn">Financial Reports</a>
@@ -28,47 +28,47 @@
                         <td>11/16/2015</td>
                         <td>Meeting 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
                         </td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Meeting 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
                         </td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Meeting 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
                         </td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Meeting 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
                         </td>
                       </tr>
                       <tr>
                         <td>11/16/2015</td>
                         <td>Meeting 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
                         </td>
                       </tr><tr>
                         <td>11/16/2015</td>
                         <td>Meeting 1</td>
                         <td class="text-right">
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a>
                         </td>
                       </tr>
                     </tbody>
@@ -76,8 +76,8 @@
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-3 hidden-xs">
 			<ul class="list-group user-list-group about-dropdown">
-					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Team</a></li>
-					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Board of Directors</a></li>
+					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1"  >Team</a></li>
+					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1"  >Board of Directors</a></li>
 					<li class="list-group-item noborder" ui-sref="hm.faq"><a class="nopadding" role="menuitem" tabindex="-1" href="#/FAQ">FAQ</a></li>
 					<li class="list-group-item noborder" ui-sref="hm.pressReleases"><a class="nopadding" role="menuitem" tabindex="-1" href="#/press-releases">Press Releases</a></li>
 					<li class="list-group-item noborder" ui-sref="hm.financialReports"><a class="nopadding" role="menuitem" tabindex="-1" href="#/financial-reports">Financial Reports</a></li>
