--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -21,8 +21,8 @@
             <h4>Company</h4>
             <div class="comp">
               <ul>
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Board of Directors</a></li>
+                <li><a>Team</a></li>
+                <li><a>Board of Directors</a></li>
                 <li><a href="#/FAQ">FAQ</a></li>
                 <li><a href="#/press-releases">Press Releases</a></li>
                 <li><a href="#/financial-reports">Financial Reports</a></li>
@@ -35,10 +35,10 @@
             <h4>Contact</h4>
             <div class="cont">
               <ul>
-                <li><a href="#">Equipment Sales and Rental: 1-855-767-4424</a></li>
-                <li><a href="#">Texada Software: 1-800-361-1233</a></li>
-                <li><a href="#">Investor Relations: (832) 767-4424</a></li>
-                <li><a href="#">Email: customercare@nobleiron.com</a></li>
+                <li><a>Equipment Sales and Rental: 1-855-767-4424</a></li>
+                <li><a>Texada Software: 1-800-361-1233</a></li>
+                <li><a>Investor Relations: (832) 767-4424</a></li>
+                <li><a>Email: customercare@nobleiron.com</a></li>
               </ul>
             </div>
           </div>
@@ -80,10 +80,10 @@
         <div class="col-lg-4 col-md-4 col-xs-12 col-sm-6">
           <div class="soc_foot">
             <ul>
-              <li><a href="#"><img src="assets/images/rss.png" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/fb_icon.png" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/twiit_icon.png" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/linked_icon.png" alt=""></a></li>
+              <li><a><img src="assets/images/rss.png" alt=""></a></li>
+              <li><a><img src="assets/images/fb_icon.png" alt=""></a></li>
+              <li><a><img src="assets/images/twiit_icon.png" alt=""></a></li>
+              <li><a><img src="assets/images/linked_icon.png" alt=""></a></li>
             </ul>
           </div>
         </div>
