--- a/src/app/order-history/order-history.html
+++ b/src/app/order-history/order-history.html
@@ -254,7 +254,7 @@
             Our team advisors are 24/7 at your service to
             help you.
           </p>
-          <p class="help_clr desc-text"><a href="#">help@nobleiron.com</a></p>
+          <p class="help_clr desc-text"><a  >help@nobleiron.com</a></p>
           <p class="skype_tex desc-text"><i class="fa fa-phone"></i>
             1-800-123-HELLO</p>
         </div>
