--- a/src/app/search/grid.html
+++ b/src/app/search/grid.html
@@ -7,7 +7,7 @@
       <img src="assets/images/certified.png">
       <br>
       <!-- <div class="star_rate">
-        <a href="#"> <i class="fa fa-star"></i>
+        <a  > <i class="fa fa-star"></i>
           <i class="fa fa-star"></i>
           <i class="fa fa-star"></i>
           <i class="fa fa-star-half-o"></i>
@@ -17,7 +17,7 @@
 
     <h4 class="lift_box_tit"><a ui-sref="hm.equipmentDetails({id: item.Product_Id})">{{item.Product_Name}}</a></h4>
     <h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a ui-sref="hm.equipmentDetails({id: item.Product_Id})">{{item.MAKE}}</a></span>
-      <a href="#" class="pull-right rating-stars"> <i class="fa fa-star"></i>
+      <a   class="pull-right rating-stars"> <i class="fa fa-star"></i>
           <i class="fa fa-star"></i>
           <i class="fa fa-star"></i>
           <i class="fa fa-star-half-o"></i>
